changed color scheme and added animations

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css?family=Inconsolata|Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Exo+2|Inconsolata&display=swap" rel="stylesheet">
     <title>Brian MacPherson</title>
     <meta name="description" content="My Personal Portfolio">
     <meta property="og:title" content="Brian MacPherson" />
