added swap to font styles

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
     <link rel="stylesheet" href="https://use.typekit.net/zpk7teh.css">
     <link href="https://fonts.googleapis.com/css?family=Inconsolata&display=swap" rel="stylesheet">
     <title>Brian MacPherson</title>
-    <meta name="description" content="My Personal Portfolio">
+    <meta name="description" content="Fullstack Developer">
     <meta property="og:title" content="Brian MacPherson" />
     <!-- <meta property="og:url" content="https://spentall.com/" /> -->
-    <meta property="og:description" content="My Personal Portfolio">
+    <meta property="og:description" content="Fullstack Developer">
     <meta property="og:image" content="%PUBLIC_URL%/logo512.png">
   </head>
   <body>
