--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <title>Brian MacPherson</title>
     <meta name="description" content="Fullstack Developer">
     <meta property="og:title" content="Brian MacPherson" />
-    <!-- <meta property="og:url" content="https://spentall.com/" /> -->
+    <meta property="og:url" content="https://bmacpherson.com/" />
     <meta property="og:description" content="Fullstack Developer">
     <meta property="og:image" content="%PUBLIC_URL%/logo512.png">
   </head>
